PA2/samples/wrong_syntax_1.out

*** Error line 2.
    if (a < b {
              ^
*** syntax error

