PA2/samples/wrong_syntax_1.java
void main() {
    if (a < b {
        a++;
    }    
}
